# embassy-pico-template

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
src/: main.rs
