[package]
name = "embassy_new_template"
version = "0.1.3"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
cyw43 = "0.2.0"
cyw43-pio = "0.2.0"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
embassy-executor = { version = "0.6.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
portable-atomic = { version = "1.7.0", features = ["critical-section"] }
static_cell = "2.1.0"
